--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -162,7 +162,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/GenderRadioGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/navigationResetPassword" />
 
-    <include layout="@layout/activity_footer" />
+    <TextView
+        android:id="@+id/navigationResetPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Reset Password"
+        android:textColor="@color/teal_200"
+        app:layout_constraintStart_toStartOf="@+id/GenderRadioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/GenderRadioGroup" />
+
+    <include
+        android:id="@+id/include3"
+        layout="@layout/activity_footer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
